# papirus-folders-gui-wayland

./: CMakeLists.txt  README.deb  README.md  mainwindow.cpp  mainwindow.h  papirus-folders-gui-0.1-Linux.deb
